--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -1,4 +1,4 @@
-.pangea-sdk-base:
+.python-sdk-base:
   before_script:
     - cd packages/pangea-sdk/
     - pip install poetry
@@ -6,7 +6,7 @@
   rules:
     - if: $CI_PIPELINE_SOURCE == "push"
 
-.pangea-sdk-test-base:
+.python-sdk-test-base:
   variables:
   # Set each service test environment
     SERVICE_AUDIT_ENV: LVE
@@ -22,8 +22,9 @@
     SERVICE_VAULT_ENV: LVE
 
   before_script:
-    - echo $ENV
-    - echo $CLOUD
+    - echo ${ENV}
+    - echo ${CLOUD}
+    - echo ${TEST}
   # Update environment variables
   # Domain
     - export PANGEA_INTEGRATION_DOMAIN_${ENV}="$(eval echo \$PANGEA_INTEGRATION_DOMAIN_${ENV}_${CLOUD})"
@@ -41,15 +42,48 @@
     - cd packages/pangea-sdk/
     - pip install poetry
     - poetry install
-
   parallel:
     matrix:
       - CLOUD: [AWS, GCP]
-
+        ENV: ${SERVICE_AUDIT_ENV}
+        TEST: test_audit
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_AUTHN_ENV}
+        TEST: test_authn
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_EMBARGO_ENV}
+        TEST: test_embargo
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_DOMAIN_INTEL_ENV}
+        TEST: test_intel.TestDomainIntel
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_IP_INTEL_ENV}
+        TEST: test_intel.TestIPIntel
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_URL_INTEL_ENV}
+        TEST: test_intel.TestURLIntel
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_USER_INTEL_ENV}
+        TEST: test_intel.TestUserIntel
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_FILE_INTEL_ENV}
+        TEST: test_intel.TestFileIntel
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_FILE_SCAN_ENV}
+        TEST: test_file_scan
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_REDACT_ENV}
+        TEST: test_redact
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_VAULT_ENV}
+        TEST: test_vault
   rules:
-    - if: $CI_PIPELINE_SOURCE == "push"
+    - if: '$CLOUD == "GCP" && $TEST == "test_file_scan"'
+      allow_failure: true
+    - if: '$CLOUD != "GCP"'
+      allow_failure: false
 
-.pangea-sdk-publish-base:
+.python-sdk-publish-base:
   before_script:
     - cd packages/pangea-sdk/
     - pip install poetry
@@ -60,14 +94,14 @@
         - packages/pangea-sdk/**/*
       when: on_success
 
-pangea-sdk-lint:
-  extends: .pangea-sdk-base
+python-sdk-lint:
+  extends: .python-sdk-base
   stage: lint
   script:
     - poetry run black .
 
-pangea-sdk-generate-docs:
-  extends: .pangea-sdk-base
+python-sdk-generate-docs:
+  extends: .python-sdk-base
   stage: lint
   allow_failure: true
   script:
@@ -78,114 +112,34 @@ pangea-sdk-generate-docs:
     paths: ['packages/pangea-sdk/python_sdk.json']
     when: on_success
 
-pangea-sdk-type-check:
-  extends: .pangea-sdk-base
+python-sdk-type-check:
+  extends: .python-sdk-base
   stage: lint
   needs: []
   script:
     - poetry run mypy pangea tests
 
-pangea-sdk-unit-testing:
-  extends: .pangea-sdk-base
+python-sdk-unit-tests:
+  extends: .python-sdk-base
   stage: unit_tests
   script:
     - poetry run python -m unittest tests.unit
 
-pangea-sdk-it-audit:
-  extends: .pangea-sdk-test-base
+python-sdk-integration-tests:
+  extends: .python-sdk-test-base
   stage: integration_tests
-  variables:
-    ENV: ${SERVICE_AUDIT_ENV}
   script:
-    - poetry run python -m unittest tests.integration.test_audit
+    - poetry run python -m unittest tests.integration.${TEST}
 
-pangea-sdk-it-vault:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_VAULT_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_vault
+# TODO: Add asyncio tests when upgrade python 3.8
+# python-sdk-asyncio-integration-tests:
+#   extends: .python-sdk-test-base
+#   stage: integration_tests
+#   script:
+#     - poetry run python -m unittest tests.integration.asyncio.${TEST}
 
-pangea-sdk-it-authn:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_AUTHN_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_authn
-
-pangea-sdk-it-embargo:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_EMBARGO_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_embargo
-
-pangea-sdk-it-redact:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_REDACT_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_redact
-
-pangea-sdk-it-file-scan:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_FILE_SCAN_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_file_scan
-  rules:
-    - if: '$CLOUD == "GCP"'
-      allow_failure: true
-    - if: '$CLOUD != "GCP"'
-      allow_failure: false
-
-pangea-sdk-it-ip-intel:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_IP_INTEL_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_intel.TestIPIntel
-
-pangea-sdk-it-domain-intel:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_DOMAIN_INTEL_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_intel.TestDomainIntel
-
-pangea-sdk-it-url-intel:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_URL_INTEL_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_intel.TestURLIntel
-
-pangea-sdk-it-user-intel:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_USER_INTEL_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_intel.TestUserIntel
-
-pangea-sdk-it-file-intel:
-  extends: .pangea-sdk-test-base
-  stage: integration_tests
-  variables:
-    ENV: ${SERVICE_FILE_INTEL_ENV}
-  script:
-    - poetry run python -m unittest tests.integration.test_intel.TestFileIntel
-
-.pangea-sdk-staging-tests:
-  extends: .pangea-sdk-test-base
+.python-sdk-staging-tests:
+  extends: .python-sdk-test-base
   variables:
     ENV: STG
   # Set each service test environment
@@ -204,10 +158,8 @@ pangea-sdk-it-file-intel:
   script:
     - poetry run python -m unittest tests.integration
 
-# TODO: Add asyncio tests when upgrade python 3.8
-
-pangea-sdk-publish:
-  extends: .pangea-sdk-publish-base
+python-sdk-publish:
+  extends: .python-sdk-publish-base
   stage: publish
   script:
     - poetry build
