Expand dependabot to the whole repo (GEA-12103)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@ updates:
       interval: daily
 
   - package-ecosystem: pip
-    directory: /examples
+    directory: /
     schedule:
       interval: daily
