Document supported runtimes and test across them (GEA-12314)

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -2,6 +2,7 @@
   before_script:
     - cd packages/pangea-sdk/
     - pip install poetry
+    - poetry check
     - poetry install
   rules:
     - if: $CI_PIPELINE_SOURCE == "push"
@@ -41,6 +42,7 @@
 
     - cd packages/pangea-sdk/
     - pip install poetry
+    - poetry check
     - poetry install
   parallel:
     matrix:
@@ -89,6 +91,7 @@
   before_script:
     - cd packages/pangea-sdk/
     - pip install poetry
+    - poetry check
     - poetry install
   rules:
     - if: $CI_COMMIT_BRANCH == "release"
