--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
   cancel-in-progress: true
 
+env:
+  POETRY_VERSION: 1.7.1
+
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -58,7 +61,7 @@ jobs:
 
       - name: Install poetry
         run: |
-          pip install --upgrade poetry==1.7.1
+          pip install --upgrade poetry==${{ env.POETRY_VERSION }}
           poetry --version
 
       - name: Setup Python
@@ -67,6 +70,39 @@ jobs:
           python-version: 3.11.7
           cache: poetry
           cache-dependency-path: '**/poetry.lock'
+
+  test-unit:
+    needs: [prefetch]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+    defaults:
+      run:
+        working-directory: ./packages/pangea-sdk
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
+
+      - name: Install poetry
+        run: |
+          pip install --upgrade poetry==${{ env.POETRY_VERSION }}
+          poetry --version
+
+      - name: Setup Python
+        uses: actions/setup-python@v5.0.0
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: poetry
+          cache-dependency-path: ./packages/pangea-sdk/poetry.lock
+
+      - name: Install dependencies
+        run: |
+          poetry check
+          poetry install
+
+      - name: Unit test
+        run: poetry run python -m unittest tests.unit
 
   examples:
     needs: [setup, prefetch]
@@ -88,7 +124,7 @@ jobs:
 
       - name: Install poetry
         run: |
-          pip install --upgrade poetry==1.7.1
+          pip install --upgrade poetry==${{ env.POETRY_VERSION }}
           poetry --version
 
       - name: Setup Python
