Disable major/minor Python updates (GEA-12843)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,9 +4,10 @@
   "ignorePaths": [],
   "packageRules": [
     {
-      "description": "Offer separate minor and patch versions for Python",
+      "description": "Offer only patch updates for Python",
       "matchDepNames": ["python"],
-      "separateMinorPatch": true
+      "matchUpdateTypes": ["major", "minor"],
+      "enabled": false
     }
   ]
 }
