--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -26,6 +26,7 @@ deprecated = "^1.2.14"
 aiohttp = "^3.8.6"
 asyncio = "^3.4.3"
 google-crc32c = "^1.5.0"
+requests-toolbelt = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.4.1"
