pangea-django: add a changelog (GEA-13190)

--- a/packages/pangea-django/pyproject.toml
+++ b/packages/pangea-django/pyproject.toml
@@ -15,6 +15,7 @@ classifiers = [
 packages = [
     { include = "pangea_django" }
 ]
+include = ["CHANGELOG.md"]
 
 [tool.poetry.dependencies]
 python = "^3.8.0"
