pangea-django: check instead of format during CI (GEA-13193)

--- a/packages/pangea-django/.django-ci.yml
+++ b/packages/pangea-django/.django-ci.yml
@@ -10,7 +10,7 @@ django_lint:
   extends: .pangea-django-base
   stage: lint
   script:
-    - poetry run black .
+    - poetry run black --check .
 
 pangea-django-publish:
   stage: publish
