--- a/packages/pangea-django/pyproject.toml
+++ b/packages/pangea-django/pyproject.toml
@@ -27,3 +27,6 @@ black = "^22.12.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
