--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -1,8 +1,8 @@
-.python-sdk-examples-base:
+.sdk-examples-base:
   stage: examples
   parallel:
     matrix:
-      - PYTHON_VERSION: ['3.7', '3.8', '3.9', '3.10', '3.11']
+      - PYTHON_VERSION: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         EXAMPLE_FOLDER:
           - audit
           - authn
@@ -26,21 +26,21 @@
     - export PANGEA_REDACT_MULTICONFIG_TOKEN="${PANGEA_INTEGRATION_MULTI_CONFIG_TOKEN_LVE_AWS}"
     - export PANGEA_REDACT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_VAULT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
-    - pip install --upgrade pip
-    - pip --version
-    - pip install --upgrade poetry
-    - poetry --version
+    - !reference [.setup, update-pip]
+    - !reference [.setup, update-poetry]
+  rules:
+    - if: $CI_COMMIT_BRANCH
 
-python-sdk-examples:
-  extends: .python-sdk-examples-base
+sdk-examples:
+  extends: .sdk-examples-base
   script:
     - cd examples/${EXAMPLE_FOLDER}/
     - poetry check
     - poetry install
     - bash ../../dev/run_examples.sh
 
-python-sdk-examples-asyncio:
-  extends: .python-sdk-examples-base
+sdk-examples-asyncio:
+  extends: .sdk-examples-base
   script:
     - cd examples/asyncio/${EXAMPLE_FOLDER}/
     - poetry check
