--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -1,15 +1,17 @@
-.python-sdk-base:
+.sdk-base:
   before_script:
+    - !reference [.setup, update-pip]
+    - !reference [.setup, update-poetry]
+
     - cd packages/pangea-sdk/
-    - pip install poetry
     - poetry check
     - poetry install
   rules:
     - if: $CI_PIPELINE_SOURCE == "push"
 
-.python-sdk-test-base:
+.sdk-test-base:
   variables:
-  # Set each service test environment
+    # Set each service test environment
     SERVICE_AUDIT_ENV: LVE
     SERVICE_AUTHN_ENV: LVE
     SERVICE_EMBARGO_ENV: LVE
@@ -26,22 +28,24 @@
     - echo ${ENV}
     - echo ${CLOUD}
     - echo ${TEST}
-  # Update environment variables
-  # Domain
+    # Update environment variables
+    # Domain
     - export PANGEA_INTEGRATION_DOMAIN_${ENV}="$(eval echo \$PANGEA_INTEGRATION_DOMAIN_${ENV}_${CLOUD})"
-  # Tokens
+    # Tokens
     - export PANGEA_INTEGRATION_TOKEN_${ENV}="$(eval echo \$PANGEA_INTEGRATION_TOKEN_${ENV}_${CLOUD})"
     - export PANGEA_INTEGRATION_VAULT_TOKEN_${ENV}="$(eval echo \$PANGEA_INTEGRATION_VAULT_TOKEN_${ENV}_${CLOUD})"
     - export PANGEA_INTEGRATION_CUSTOM_SCHEMA_TOKEN_${ENV}="$(eval echo \$PANGEA_INTEGRATION_CUSTOM_SCHEMA_TOKEN_${ENV}_${CLOUD})"
     - export PANGEA_INTEGRATION_MULTI_CONFIG_TOKEN_${ENV}="$(eval echo \$PANGEA_INTEGRATION_MULTI_CONFIG_TOKEN_${ENV}_${CLOUD})"
-  # Config IDs
+    # Config IDs
     - export PANGEA_AUDIT_CONFIG_ID_1_${ENV}="$(eval echo \$PANGEA_AUDIT_CONFIG_ID_1_${ENV}_${CLOUD})"
     - export PANGEA_AUDIT_CONFIG_ID_2_${ENV}="$(eval echo \$PANGEA_AUDIT_CONFIG_ID_2_${ENV}_${CLOUD})"
     - export PANGEA_REDACT_CONFIG_ID_1_${ENV}="$(eval echo \$PANGEA_REDACT_CONFIG_ID_1_${ENV}_${CLOUD})"
     - export PANGEA_REDACT_CONFIG_ID_2_${ENV}="$(eval echo \$PANGEA_REDACT_CONFIG_ID_2_${ENV}_${CLOUD})"
 
+    - !reference [.setup, update-pip]
+    - !reference [.setup, update-poetry]
+
     - cd packages/pangea-sdk/
-    - pip install poetry
     - poetry check
     - poetry install
   parallel:
@@ -80,72 +84,71 @@
         ENV: ${SERVICE_VAULT_ENV}
         TEST: test_vault
   rules:
-    - if: '$CLOUD == "GCP" && $TEST == "test_file_scan"'
+    - if: $CI_COMMIT_BRANCH && '$CLOUD == "GCP" && $TEST == "test_file_scan"'
       allow_failure: true
-    - if: '$CLOUD == "GCP" && $TEST != "test_file_scan"'
+    - if: $CI_COMMIT_BRANCH && '$CLOUD == "GCP" && $TEST != "test_file_scan"'
       allow_failure: false
-    - if: '$CLOUD != "GCP"'
+    - if: $CI_COMMIT_BRANCH && '$CLOUD != "GCP"'
       allow_failure: false
 
-.python-sdk-publish-base:
-  before_script:
-    - cd packages/pangea-sdk/
-    - pip install poetry
-    - poetry check
-    - poetry install
-  rules:
-    - if: $CI_COMMIT_BRANCH == "release"
-      changes:
-        - packages/pangea-sdk/**/*
-      when: on_success
-
-python-sdk-lint:
-  extends: .python-sdk-base
+sdk-lint-black:
+  extends: .sdk-base
   stage: lint
+  needs: []
   script:
     - poetry run black .
 
-python-sdk-generate-docs:
-  extends: .python-sdk-base
-  stage: lint
-  allow_failure: true
-  script:
-    - poetry run python parse_module.py > python_sdk.json
-  artifacts:
-    expire_in: 1 month
-    expose_as: python_sdk
-    paths: ['packages/pangea-sdk/python_sdk.json']
-    when: on_success
-
-python-sdk-type-check:
-  extends: .python-sdk-base
+sdk-lint-mypy:
+  extends: .sdk-base
   stage: lint
   needs: []
   script:
     - poetry run mypy pangea tests
 
-python-sdk-unit-tests:
-  extends: .python-sdk-base
+sdk-build:
+  extends: .sdk-base
+  stage: build
+  script:
+    - poetry build
+  artifacts:
+    paths: ["packages/pangea-sdk/dist"]
+    when: on_success
+
+sdk-docs:
+  extends: .sdk-base
+  stage: build
+  script:
+    - poetry run python parse_module.py > python_sdk.json
+  artifacts:
+    expire_in: 1 month
+    expose_as: python_sdk
+    paths: ["packages/pangea-sdk/python_sdk.json"]
+    when: on_success
+
+sdk-unit-tests:
+  extends: .sdk-base
   stage: unit_tests
   script:
     - poetry run python -m unittest tests.unit
 
-python-sdk-integration-tests:
-  extends: .python-sdk-test-base
+sdk-integration-tests:
+  extends: .sdk-test-base
   stage: integration_tests
   script:
     - poetry run python -m unittest tests.integration.${TEST}
 
 # TODO: Add asyncio tests when upgrade python 3.8
-# python-sdk-asyncio-integration-tests:
-#   extends: .python-sdk-test-base
+# sdk-asyncio-integration-tests:
+#   extends: .sdk-test-base
 #   stage: integration_tests
 #   script:
 #     - poetry run python -m unittest tests.integration.asyncio.${TEST}
 
-python-sdk-publish:
-  extends: .python-sdk-publish-base
+sdk-publish:
+  extends: .sdk-base
   stage: publish
+  needs: [sdk-build]
   script:
-    - poetry build
     - poetry publish --username __token__ --password $PYPI_SDK_TOKEN
+  rules:
+    - if: $CI_COMMIT_TAG =~ /pangea-sdk\/.+/
