--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -21,6 +21,7 @@
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
+    SERVICE_SANITIZE_ENV: DEV
 
   before_script:
     - echo ${ENV}
@@ -79,6 +80,9 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: test_vault
+      - CLOUD: [AWS]  # FIXME: Add GCP when supported
+        ENV: ${SERVICE_SANITIZE_ENV}
+        TEST: test_sanitize
   rules:
     - if: '$CLOUD == "GCP" && $TEST == "test_file_scan"'
       allow_failure: true
