--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -24,6 +24,7 @@
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
     SERVICE_SHARE_ENV: LVE
+    SERVICE_SANITIZE_ENV: LVE
 
   before_script:
     - echo ${ENV}
@@ -87,6 +88,9 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_SHARE_ENV}
         TEST: test_share
+      - CLOUD: [AWS]  # FIXME: Add GCP when supported
+        ENV: ${SERVICE_SANITIZE_ENV}
+        TEST: test_sanitize
   rules:
     - if: $CI_COMMIT_BRANCH
       allow_failure: false
