--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -24,6 +24,7 @@
     SERVICE_FILE_INTEL_ENV: LVE
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
+    SERVICE_SANITIZE_ENV: LVE
     SERVICE_VAULT_ENV: LVE
 
   before_script:
@@ -86,6 +87,9 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_REDACT_ENV}
         TEST: test_redact
+      - CLOUD: [AWS]
+        ENV: ${SERVICE_SANITIZE_ENV}
+        TEST: test_sanitize
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: test_vault
