--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -21,7 +21,7 @@
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
-    SERVICE_SANITIZE_ENV: DEV
+    SERVICE_SANITIZE_ENV: LVE
 
   before_script:
     - echo ${ENV}
