--- a/packages/pangea-django/.django-ci.yml
+++ b/packages/pangea-django/.django-ci.yml
@@ -31,6 +31,7 @@ django-publish:
   stage: publish
   needs: [django-build]
   script:
+    - bash ../../dev/validate_tag.sh
     - poetry publish --username __token__ --password $PYPI_SDK_TOKEN
   rules:
     - if: $CI_COMMIT_TAG =~ /pangea-django\/.+/
