--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -149,7 +149,7 @@ sdk-publish:
   stage: publish
   needs: [sdk-build]
   script:
-    - bash ../../dev/validate_tag.sh
+    - bash ../../dev/validate_tag.sh $CI_COMMIT_TAG
     - poetry publish --username __token__ --password $PYPI_SDK_TOKEN
   rules:
     - if: $CI_COMMIT_TAG =~ /pangea-sdk\/.+/
