--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,13 @@ repos:
     hooks:
       - id: check-json
       - id: end-of-file-fixer
-      -
-        id: trailing-whitespace
+      - id: trailing-whitespace
         exclude: .md
       - id: check-merge-conflict
       - id: debug-statements
       - id: detect-aws-credentials
+        args:
+          - --allow-missing-credentials
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
       - id: no-commit-to-branch
@@ -28,9 +29,18 @@ repos:
     hooks:
       - id: isort
         args:
-          - "--profile"
-          - "black"
-          - "--line-length"
+          - --profile
+          - black
+          - --line-length
           - "120"
-          - "--balanced"
-          - "--use-parentheses"
+          - --resolve-all-configs
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.4.1
+    hooks:
+      - id: mypy
+        args:
+          - --ignore-missing-imports
+        additional_dependencies:
+          - types-Deprecated==1.2.9.3
+          - types-python-dateutil==2.8.19.14
+          - types-requests==2.31.0.10
