--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -41,6 +41,9 @@ line-length = 120
 
 [tool.isort]
 profile = "black"
+line_length = 120
+src_paths = ["pangea", "tests"]
+known_local_folder = ["pangea", "tests"]
 
 [tool.mypy]
 python_version = "3.8"
