--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -29,12 +29,13 @@ google-crc32c = "^1.5.0"
 requests-toolbelt = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.4.1"
 black = "^23.3.0"
 docstring-parser = "^0.15"
+isort = "^5.11.5"
+mypy = "^1.4.1"
 types-Deprecated = "^1.2.9.3"
-types-requests = "^2.31.0.10"
 types-python-dateutil = "^2.8.19.14"
+types-requests = "^2.31.0.10"
 
 [tool.black]
 line-length = 120
