--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -21,7 +21,7 @@
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
-    SERVICE_SHARE_ENV: DEV
+    SERVICE_SHARE_ENV: LVE
 
   before_script:
     - echo ${ENV}
@@ -85,11 +85,6 @@
         TEST: test_share
 
   rules:
-    - if: '$CLOUD == "GCP" && $TEST == "test_file_scan"'
-      allow_failure: true
-    - if: '$CLOUD == "GCP" && $TEST != "test_file_scan"'
-      allow_failure: false
-    - if: '$CLOUD != "GCP"'
       allow_failure: false
 
 .python-sdk-publish-base:
