--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -14,6 +14,7 @@
           - redact
           - sanitize
           - vault
+          - share
   image: python:${PYTHON_VERSION}-bookworm
   before_script:
     - export PANGEA_AUDIT_AUTH0_CONFIG_ID="${PANGEA_AUDIT_CONFIG_ID_3_LVE_AWS}"
@@ -32,6 +33,7 @@
     - export PANGEA_REDACT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_SANITIZE_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_VAULT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
+    - export PANGEA_SHARE_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - !reference [.setup, update-pip]
     - !reference [.setup, update-poetry]
   rules:
