--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -26,6 +26,7 @@
     SERVICE_REDACT_ENV: LVE
     SERVICE_SANITIZE_ENV: LVE
     SERVICE_VAULT_ENV: LVE
+    SERVICE_SHARE_ENV: LVE
 
   before_script:
     - echo ${ENV}
@@ -93,6 +94,9 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: test_vault
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_SHARE_ENV}
+        TEST: test_share
   rules:
     - if: '$CI_COMMIT_BRANCH && $CLOUD == "GCP" && $TEST == "test_file_scan"'
       allow_failure: true
