--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -23,6 +23,7 @@
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
+    SERVICE_SHARE_ENV: LVE
 
   before_script:
     - echo ${ENV}
@@ -83,12 +84,11 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: test_vault
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_SHARE_ENV}
+        TEST: test_share
   rules:
-    - if: $CI_COMMIT_BRANCH && '$CLOUD == "GCP" && $TEST == "test_file_scan"'
-      allow_failure: true
-    - if: $CI_COMMIT_BRANCH && '$CLOUD == "GCP" && $TEST != "test_file_scan"'
-      allow_failure: false
-    - if: $CI_COMMIT_BRANCH && '$CLOUD != "GCP"'
+    - if: $CI_COMMIT_BRANCH
       allow_failure: false
 
 sdk-build:
