Add Sanitize examples (#324)
* Add sanitize examples
* fixup! mypy errors
* fixup! run isort

--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -12,6 +12,7 @@
           - file_scan
           - intel
           - redact
+          - sanitize
           - vault
   image: python:${PYTHON_VERSION}-bookworm
   before_script:
@@ -29,6 +30,7 @@
     - export PANGEA_REDACT_CONFIG_ID="${PANGEA_REDACT_CONFIG_ID_1_LVE_AWS}"
     - export PANGEA_REDACT_MULTICONFIG_TOKEN="${PANGEA_INTEGRATION_MULTI_CONFIG_TOKEN_LVE_AWS}"
     - export PANGEA_REDACT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
+    - export PANGEA_SANITIZE_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_VAULT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - !reference [.setup, update-pip]
     - !reference [.setup, update-poetry]
