chore: update vscode configs (GEA-13469)
"python.formatting.provider" has long been deprecated in favor of the
ms-python.black-formatter extension. Also adding more recommended
extensions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "editor.formatOnSave": false,
-  "python.formatting.provider": "black",
 
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": false,
@@ -16,5 +15,9 @@
     "*test*.py"
   ],
   "python.testing.pytestEnabled": false,
-  "python.testing.unittestEnabled": true
+  "python.testing.unittestEnabled": true,
+
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  }
 }
