chore: run AuthZ tests against LVE

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -25,7 +25,7 @@
     SERVICE_VAULT_ENV: LVE
     SERVICE_SHARE_ENV: LVE
     SERVICE_SANITIZE_ENV: LVE
-    SERVICE_AUTHZ_ENV: DEV
+    SERVICE_AUTHZ_ENV: LVE
 
   before_script:
     - echo ${ENV}
