--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -25,6 +25,7 @@
     SERVICE_VAULT_ENV: LVE
     SERVICE_SHARE_ENV: LVE
     SERVICE_SANITIZE_ENV: LVE
+    SERVICE_AUTHZ_ENV: LVE
 
   before_script:
     - echo ${ENV}
@@ -91,6 +92,9 @@
       - CLOUD: [AWS]  # FIXME: Add GCP when supported
         ENV: ${SERVICE_SANITIZE_ENV}
         TEST: test_sanitize
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_AUTHZ_ENV}
+        TEST: test_authz
   rules:
     - if: $CI_COMMIT_BRANCH
       allow_failure: false
