AuthZ: Implementation, tests and docs (#275)
Co-authored-by: Kenan Yildirim <kenan.yildirim@pangea.cloud>

--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -7,6 +7,7 @@
         EXAMPLE_FOLDER:
           - audit
           - authn
+          - authz
           - embargo
           - file_scan
           - intel
@@ -20,6 +21,7 @@
     - export PANGEA_AUDIT_MULTICONFIG_TOKEN="${PANGEA_INTEGRATION_MULTI_CONFIG_TOKEN_LVE_AWS}"
     - export PANGEA_AUDIT_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_AUTHN_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
+    - export PANGEA_AUTHZ_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_DOMAIN="${PANGEA_INTEGRATION_DOMAIN_LVE_AWS}"
     - export PANGEA_EMBARGO_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
     - export PANGEA_FILE_SCAN_TOKEN="${PANGEA_INTEGRATION_TOKEN_LVE_AWS}"
