Add retry to integration and examples tests

--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -1,5 +1,6 @@
 .sdk-examples-base:
   stage: examples
+  retry: 2
   parallel:
     matrix:
       - PYTHON_VERSION: ["3.7", "3.8", "3.9", "3.10", "3.11"]
