--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,7 @@
   "python.linting.flake8Args": [
     "--max-line-length=120"
   ],
-  "python.testing.unittestArgs": [
-    "-v",
-    "-s",
-    "./tests",
-    "-p",
-    "*test*.py"
-  ],
+  "python.testing.cwd": "${workspaceFolder}/packages/pangea-sdk",
   "python.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": true,
 
