--- a/examples/audit/pyproject.toml
+++ b/examples/audit/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "audit-examples"
 version = "2.0.0"
-description = "This is a set of examples about how to use python SDK to communicate with Vault service"
+description = "A set of examples on how to use Pangea's Python SDK to communicate with Secure Audit Log."
 authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
 readme = "README.md"
 packages = [{include = "audit_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.7.2"
-pangea-sdk = "^3.7.1"
+pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
