--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -212,6 +212,42 @@ jobs:
       - name: Unit test
         run: poetry run python -m unittest tests.unit
 
+  sdk-docs:
+    needs: [prefetch]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/pangea-sdk
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
+
+      - name: Install poetry
+        run: |
+          pip install --upgrade poetry==${{ env.POETRY_VERSION }}
+          poetry --version
+
+      - name: Setup Python
+        uses: actions/setup-python@v5.1.0
+        with:
+          python-version: 3.11.9 # renovate: datasource=docker depName=python
+          cache: poetry
+          cache-dependency-path: ./packages/pangea-sdk/poetry.lock
+
+      - name: Install dependencies
+        run: |
+          poetry check
+          poetry install
+
+      - name: Generate docs
+        run: poetry run python parse_module.py > python_sdk.json
+
+      - name: Upload
+        uses: actions/upload-artifact@v4.3.1
+        with:
+          name: python_sdk.json
+          path: ./packages/pangea-sdk/python_sdk.json
+
   examples:
     needs: [setup, prefetch]
     runs-on: ubuntu-latest
