Added Readme with clear instructions & screenshots

--- a/examples/authn/django-authn/.env.example
+++ b/examples/authn/django-authn/.env.example
@@ -1,3 +1,3 @@
-PANGEA_AUTHN_TOKEN=<Pangea AuthN Token>
+PANGEA_AUTHN_TOKEN=<Pangea AuthN Client Token>
 PANGEA_DOMAIN=<Pangea Domain>
 PANGEA_HOSTED_LOGIN=<Pangea Hosted Login>
