--- a/examples/asyncio/vault/pyproject.toml
+++ b/examples/asyncio/vault/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "vault_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.8.18"
-pangea-sdk = "^3.9.0"
+pangea-sdk = { path = "../../../packages/pangea-sdk", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
