--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -17,16 +17,17 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7.2"
+python = "^3.8.0"
 requests = "^2.31.0"
-cryptography = "^42.0.5"
+cryptography = "^43.0.0"
 python-dateutil = "^2.9.0"
-pydantic = "^1.10.14"
+pydantic = "^2.8.2"
 deprecated = "^1.2.14"
-aiohttp = "^3.8.6"
+aiohttp = "^3.9.3"
 asyncio = "^3.4.3"
 google-crc32c = "^1.5.0"
 requests-toolbelt = "^1.0.0"
+typing-extensions = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
