--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,9 +66,11 @@ jobs:
           poetry --version
 
       - name: Setup Python
-        uses: actions/setup-python@v5.0.0
+        uses: actions/setup-python@v5.1.1
         with:
           python-version: 3.11.7
+          cache: poetry
+          cache-dependency-path: '**/poetry.lock'
 
   pre-commit:
     # Skip pre-commit on `main` because the `no-commit-to-branch` hook won't
@@ -81,7 +83,7 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Setup Python
-        uses: actions/setup-python@v5.0.0
+        uses: actions/setup-python@v5.1.1
         with:
           python-version: 3.11.7
 
@@ -103,9 +105,11 @@ jobs:
           poetry --version
 
       - name: Setup Python
-        uses: actions/setup-python@v5.0.0
+        uses: actions/setup-python@v5.1.1
         with:
-          python-version: 3.8.0
+          python-version: 3.8.19
+          cache: poetry
+          cache-dependency-path: ./packages/pangea-sdk/poetry.lock
 
       - name: Install dependencies
         run: |
@@ -131,9 +135,11 @@ jobs:
           poetry --version
 
       - name: Setup Python
-        uses: actions/setup-python@v5.0.0
+        uses: actions/setup-python@v5.1.1
         with:
-          python-version: 3.8.0
+          python-version: 3.8.19
+          cache: poetry
+          cache-dependency-path: ./packages/pangea-sdk/poetry.lock
 
       - name: Install dependencies
         run: |
@@ -159,9 +165,11 @@ jobs:
           poetry --version
 
       - name: Setup Python
-        uses: actions/setup-python@v5.0.0
+        uses: actions/setup-python@v5.1.1
         with:
-          python-version: 3.8.0
+          python-version: 3.8.19
+          cache: poetry
+          cache-dependency-path: ./packages/pangea-sdk/poetry.lock
 
       - name: Install dependencies
         run: |
@@ -190,9 +198,11 @@ jobs:
           poetry --version
 
       - name: Setup Python
-        uses: actions/setup-python@v5.0.0
+        uses: actions/setup-python@v5.1.1
         with:
           python-version: ${{ matrix.python-version }}
+          cache: poetry
+          cache-dependency-path: ./packages/pangea-sdk/poetry.lock
 
       - name: Install dependencies
         run: |
@@ -226,9 +236,11 @@ jobs:
           poetry --version
 
       - name: Setup Python
-        uses: actions/setup-python@v5.0.0
+        uses: actions/setup-python@v5.1.1
         with:
           python-version: 3.11.7
+          cache: poetry
+          cache-dependency-path: ./examples/${{ matrix.example }}/poetry.lock
 
       - name: Install dependencies
         run: |
