--- a/examples/intel/pyproject.toml
+++ b/examples/intel/pyproject.toml
@@ -22,6 +22,10 @@ line-length = 120
 profile = "black"
 known_local_folder = ["intel_examples"]
 
+[tool.mypy]
+python_version = "3.8"
+warn_unused_ignores = true
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
