--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5.2.0
         with:
-          python-version: 3.8
+          python-version: 3.9
           cache: poetry
           cache-dependency-path: ./packages/${{ matrix.package }}/poetry.lock
 
@@ -143,7 +143,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5.2.0
         with:
-          python-version: 3.8
+          python-version: 3.9
           cache: poetry
           cache-dependency-path: ./packages/${{ matrix.package }}/poetry.lock
 
@@ -176,7 +176,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5.2.0
         with:
-          python-version: 3.8
+          python-version: 3.9
           cache: poetry
           cache-dependency-path: ./packages/${{ matrix.package }}/poetry.lock
 
@@ -193,7 +193,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
     defaults:
       run:
         working-directory: ./packages/pangea-sdk
@@ -306,7 +306,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
     defaults:
       run:
         working-directory: ./packages/pangea-django
