--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -3,7 +3,7 @@
   retry: 2
   parallel:
     matrix:
-      - PYTHON_VERSION: ["3.8", "3.9", "3.10", "3.11"]
+      - PYTHON_VERSION: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         EXAMPLE_FOLDER:
           - audit
           - authn
