--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -16,6 +16,7 @@
     SERVICE_AUDIT_ENV: LVE
     SERVICE_AUTHN_ENV: LVE
     SERVICE_AUTHZ_ENV: LVE
+    SERVICE_DATA_GUARD_ENV: LVE
     SERVICE_EMBARGO_ENV: LVE
     SERVICE_FILE_SCAN_ENV: LVE
     SERVICE_IP_INTEL_ENV: LVE
@@ -23,6 +24,7 @@
     SERVICE_URL_INTEL_ENV: LVE
     SERVICE_FILE_INTEL_ENV: LVE
     SERVICE_USER_INTEL_ENV: LVE
+    SERVICE_PROMPT_GUARD_ENV: LVE
     SERVICE_REDACT_ENV: LVE
     SERVICE_SANITIZE_ENV: LVE
     SERVICE_VAULT_ENV: LVE
@@ -65,6 +67,9 @@
         ENV: ${SERVICE_AUTHZ_ENV}
         TEST: test_authz
       - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_DATA_GUARD_ENV}
+        TEST: test_data_guard
+      - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_EMBARGO_ENV}
         TEST: test_embargo
       - CLOUD: [AWS, GCP]
@@ -85,6 +90,9 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_FILE_SCAN_ENV}
         TEST: test_file_scan
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_PROMPT_GUARD_ENV}
+        TEST: test_prompt_guard
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_REDACT_ENV}
         TEST: test_redact
