--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -66,7 +66,7 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_AUTHZ_ENV}
         TEST: test_authz
-      - CLOUD: [AWS, GCP]
+      - CLOUD: [AWS]
         ENV: ${SERVICE_DATA_GUARD_ENV}
         TEST: test_data_guard
       - CLOUD: [AWS, GCP]
@@ -90,7 +90,7 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_FILE_SCAN_ENV}
         TEST: test_file_scan
-      - CLOUD: [AWS, GCP]
+      - CLOUD: [AWS]
         ENV: ${SERVICE_PROMPT_GUARD_ENV}
         TEST: test_prompt_guard
       - CLOUD: [AWS, GCP]
