Fix test_audit_tools: - Load test environment from env var - Add test_audit_tools.py to pipeline

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -58,6 +58,9 @@
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_AUDIT_ENV}
         TEST: test_audit
+      - CLOUD: [AWS]
+        ENV: ${SERVICE_AUDIT_ENV}
+        TEST: test_audit_tools
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_AUTHN_ENV}
         TEST: test_authn
